# holodeck

./: .gitignore  .lgtm.yml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  accretion.py  backup_doppler.ipynb  convert_notebook_tests.py  cysetup.py  cytest.pyx  doppler-merge.py  doppler.ipynb  gp-fitting-example.slurm  gp_utils.py  gps-setup.ipynb  gps-setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_holodeck_lib_gen__daedalus.sh  sam_utils.py  setup.cfg  setup.py  test.py  test_sam-eccen.py  tester.sh  tox.ini  train_gp.py
.github/: CONTRIBUTING.md  publish_to_pypi.yaml
analysis/: holodeck-parameter-space.ipynb  limit-curve_witt.ipynb  pop-data.ipynb
data_external/: illustris-galaxy-mergers_L75n1820FP_gas-100_dm-100_star-100_bh-000.hdf5
dev-notebooks/: GWB_detstats_demo.ipynb  GWB_detstats_demo_extended.ipynb  TOAs-and-anisotropy.ipynb  _hardening.ipynb  discrete_illusitris_sample_universe.ipynb  discrete_sampling.ipynb  discretization-comparison.ipynb  fixed_time.ipynb  gp-error-metrics.ipynb  gwb_anatomy_lb_dev.ipynb  hardening_fixed-hard.ipynb  ill-pop_becsy.ipynb  librarian.ipynb  library-explorer.ipynb  numerics.ipynb  sam-eccen.ipynb  sam-ndens-scatter.ipynb  single_source_plots.ipynb  ss_gwb_redz.ipynb  test.ipynb  test_cyutils.ipynb  test_ss_gwb.ipynb  test_ss_vs_gwb_percentiles.ipynb  toy-strain-model.ipynb  toy-strain-model_showing-error.ipynb
devtools/: README.md
docs/: Makefile  README.md  README.rst  api.rst  conf.py  docgen.sh  getting_started.rst  index.rst  make.bat  (+2 more)
(+687 files in other folders)
